2008-07-17  Gavin Barraclough  <barraclough@apple.com>

        Merge pre&post bracket nodes to simplify the parse tree.
        Sunspider results show no performance change.

        Reviewed by Sam Weinig.

        * kjs/grammar.y:
        * kjs/nodes.cpp:
        * kjs/nodes.h:
        * kjs/nodes2string.cpp:

2008-07-17  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Fix the 32-bit gcc builds, conversion from "long int" to Register is
        ambiguous. Explicitly choose the intptr_t constructor.

        * VM/Machine.cpp:
        (KJS::Machine::initializeCallFrame):
        * VM/Register.h:
        (KJS::Register::Register):

2008-07-16  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Geoff Garen.

        Fix JavaScript in 64-bit by using a pointer-sized integer
        type in the Register union.  Also includes a rename of
        the intType constant to IntType.

        * VM/Machine.cpp:
        (KJS::Machine::initializeCallFrame):
        * VM/Register.h:
        (KJS::Register::):
        (KJS::Register::Register):

2008-07-16  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        First step toward putting doubles in registers: Turned Register into a
        proper abstraction layer. It is no longer possible to cast a Register
        to a JSValue*, or a Register& to a JSValue*&, or to access the union
        inside a Register directly.
        
        SunSpider reports no change.
        
        In support of this change, I had to make the following mechanical changes
        in a lot of places:
        
        1. Clients now use explicit accessors to read data out of Registers, and
        implicit copy constructors to write data into registers.
        
        So, assignment that used to look like
        
            x.u.jsValue = y;
        
        now looks like
        
            x = y;
            
        And access that used to look like
        